journald spammed with TypeError when changing focus
Affected version
3.36.0 on F32. X11. NVIDIA Binary drivers.
Bug summary
Shell locks up when switching between windows or to the overview.
Steps to reproduce
Unclear yet if i restart if I'll have the same issue. I know I've toggled on and off the horizontal workspaces and task list extensions at some point to test that they worked for a customer. Will have to log out to test.
What happened
Stalls of > 1 second while changing focus. Also includes focusing the shell (if unfocusing an X11 window).
Strace of the gnome-shell process shows a huge amount of time spent on sendmsg() to write data to journald of the following message (many times):
Mar 21 15:00:52 DESKTOP-OBPQ9M3.domain gnome-shell[2009]: JS ERROR: TypeError: null has no properties
_onFocusChanged@resource:///org/gnome/shell/ui/closeDialog.js:135:9